[package]
name = "lighthouse-logs"
version = "0.1.0"
authors = ["Wink Saville <wink@saville.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lighthouse_logs_lib"
path = "src/lib.rs"

[[bin]]
name = "lighthouse_logs"
path = "src/main.rs"

[dependencies]
custom_logger = { git = "https://github.com/winksaville/custom_logger", version = "0.3.0" }
log = "0.4.20"
test-log = "0.2.14"

[profile.release]
# With no options --release size=3,788,856 for X86_64 with rustc 1.76.0
# With all options --release size=317,776 for X86_64 with rustc 1.76.0

# With just this size=362,832
strip = true

# Add this with strip, size=366,928 (i.e. gets bigger above just strip)
opt-level = 'z'

# Add this with strip, size=334,160 (i.e. reduce size of just strip)
lto = true

# Add this with strip, size=362,832 (i.e. no change)
codegen-units = 1

